DT-2023 Fixed the IE alignment issue.

--- a/src/client/components/atoms/newsletter-small-primary-button/newsletter-small-primary-button.scss
+++ b/src/client/components/atoms/newsletter-small-primary-button/newsletter-small-primary-button.scss
@@ -14,5 +14,9 @@
 @include small-button(".NewsletterSmallPrimaryButton");
 
 .NewsletterSmallPrimaryButton{
-  height: 50px;
+  height: 40px;
+  width: 134px;
+  text-align: center;
+  line-height: 10px;
+  font-size: 16.5px;
 }
